# Github-Copilot-OCS

./: README.md  generated_config.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: pyinstaller-build.yml
ocs_toolkit/: __init__.py  answerer_wrapper.py  cli.py  mock_server.py  ocs_server.py  server_runtime.py  tui.py
tests/: test_answerer_wrapper.py
